Bug 1591711 - Fix incorrect calculation of non-incremental GC trigger r=allstarschh a=pascalc

Fix a mistake calculating the heap size to compare against.  It's unlikely this bug had much effect because whether to perform an incremental or non-incremental collection is decided when we start the collection in GCRuntime::budgetIncrementalGC().

Differential Revision: https://phabricator.services.mozilla.com/D50828