js/src/gc/GC.cpp
@@ -3018,7 +3018,7 @@ TriggerResult GCRuntime::checkHeapThreshold(const HeapSize& heapSize,
   }
 
   size_t niThreshold = thresholdBytes * tunables.nonIncrementalFactor();
-  if (usedBytes >= thresholdBytes * niThreshold) {
+  if (usedBytes >= niThreshold) {
     // We have passed the non-incremental threshold: immediately trigger a
     // non-incremental GC.
     return TriggerResult{TriggerKind::NonIncremental, usedBytes, niThreshold};
